# Loki-17

./: README.md
book code test/: reame.md
book code test/LokiTest/: CMakeLists.txt  FunctorTest.cpp  FunctorTest.h  Makefile  test  test.cpp
book code test/LokiTest/Loki/: SmallObj.cpp
loki-master/: readme.txt
